# tofino-sde

./: .gitmodules  CMakeLists.txt
.github/buildomat/: config.toml
.github/buildomat/jobs/: build.sh  illumos.sh  linux.sh
oxide/: build.sh  package.sh
oxide/package/: common_dir_list  common_file_list  dev_dir_list  dev_file_list  support_libs
oxide/package/helios/: dir_list  file_list  package.sh  tofino_sde.mf.base
oxide/package/linux/: dev_dir_list  dev_file_list  dev_root_file_list  file_list  package.sh
oxide/package/linux/debian_sde/: changelog  control
oxide/package/linux/debian_sde_dev/: control  copyright
oxide/remote_model/: Makefile  remote_model.c
oxide/wrap_libport_mgr_hw/: Makefile  shim.c
pkgsrc/bf-drivers/: CMakeLists.txt
pkgsrc/bf-drivers/bf_switchd/: CMakeLists.txt  bf_hw_porting_config.c  bf_model_pltfm_porting.c  bf_switchd.c  bf_switchd.h  diag_py.c  switchd_ucli.c
pkgsrc/bf-drivers/include/: illumos.h
pkgsrc/bf-drivers/include/bf_pm/: bf_pm_fsm_common.h  bf_pm_intf.h
pkgsrc/bf-drivers/include/dru_sim/: dru_sim.h
pkgsrc/bf-drivers/include/dvm/: bf_drv_intf.h
pkgsrc/bf-drivers/include/knet_mgr/: bf_knet_ioctl.h
pkgsrc/bf-drivers/include/port_mgr/: port_mgr_port_evt.h
pkgsrc/bf-drivers/include/tofino/bf_pal/: bf_pal_pltfm_porting.h
pkgsrc/bf-drivers/src/bf_pal/: bf_pal_pltfm_porting.c  bf_pal_port_intf.c
pkgsrc/bf-drivers/src/bf_pm/: CMakeLists.txt  bf_pm_fsm_common.c  bf_pm_intf.c  bf_pm_tof3_ucli.c  bf_pm_ucli.c  pm.c  pm.h  pm_intf.h
pkgsrc/bf-drivers/src/bf_pm/port_fsm/: bf_pm_fsm_if.c  bf_pm_fsm_if.h
pkgsrc/bf-drivers/src/bf_pm/port_fsm/tof2_fsm/: bf_pm_fsm_autoneg.c  bf_pm_fsm_dfe.c  bf_pm_fsm_emulator.c  bf_pm_fsm_mac_far_loopback.c  bf_pm_fsm_mac_loopback.c  (+6 more)
pkgsrc/bf-drivers/src/bf_rt/bf_rt_common/: bf_rt_init_impl.hpp  bf_rt_table_attributes_impl.cpp  bf_rt_table_operations_state.hpp  bf_rt_utils.hpp
pkgsrc/bf-drivers/src/bf_rt/bf_rt_dev/: bf_rt_dev_table_impl.cpp
pkgsrc/bf-drivers/src/bf_rt/bf_rt_p4/: bf_rt_p4_table_key_impl.cpp
pkgsrc/bf-drivers/src/bf_rt/tests/: bf_rt_entry_gen.cpp
pkgsrc/bf-drivers/src/dru_sim/: dma_sim_intf.c
pkgsrc/bf-drivers/src/dvm/: bf_drv_shell.c  dvm.h  dvm_clients.c
pkgsrc/bf-drivers/src/knet_mgr/: knet_mgr.c
pkgsrc/bf-drivers/src/lld/: lld_diag_ext.c  lld_dr.c  lld_efuse_tof2.c  lld_efuse_tof3.c  lld_reg_parse.c
pkgsrc/bf-drivers/src/pipe_mgr/: pipe_mgr_alpm.h  pipe_mgr_bitmap.h  pipe_mgr_drv.c  pipe_mgr_entry_format.c  pipe_mgr_instr.h  pipe_mgr_learn.c  pipe_mgr_phy_mem_map.c  pipe_mgr_pipeline_cfg_dnld.c  pipe_mgr_rmt_cfg.c  pipe_mgr_stat_lrt.c  pipe_mgr_stat_tbl_mgr.c  pipe_mgr_stat_trace.c  pipe_mgr_stful_tbl_mgr.c
pkgsrc/bf-drivers/src/port_mgr/: CMakeLists.txt  bf_map.c  bf_port_if.c  port_mgr.c  port_mgr_port.c  port_mgr_port.h
pkgsrc/bf-drivers/src/port_mgr/port_mgr_tof2/: port_mgr_tof2_port.c
pkgsrc/bf-drivers/src/port_mgr/port_mgr_tof3/: port_mgr_tof3_map.h
pkgsrc/bf-drivers/src/tdi_tofino/tdi_p4/: tdi_p4_table_key_impl.cpp
pkgsrc/bf-drivers/src/tdi_tofino/tests/: tdi_entry_gen.cpp
pkgsrc/bf-platforms/: CMakeLists.txt
pkgsrc/bf-platforms/drivers/include/bf_bd_cfg/: bf_bd_cfg_bd_map.h  bf_bd_cfg_intf.h  bf_bd_cfg_porting.h
pkgsrc/bf-platforms/drivers/include/bf_pltfm_types/: bf_pltfm_types.h
pkgsrc/bf-platforms/drivers/include/bf_port_mgmt/: bf_port_mgmt_intf.h  bf_port_mgmt_porting.h
pkgsrc/bf-platforms/drivers/include/bf_qsfp/: bf_qsfp.h  sff.h
pkgsrc/bf-platforms/drivers/src/bf_bd_cfg/: bf_bd_cfg_bld_ver.h  bf_bd_cfg_intf.c  bf_bd_cfg_porting.c  bf_bd_cfg_ver.h
pkgsrc/bf-platforms/drivers/src/bf_pltfm_mgr/: pltfm_mgr_init.c  pltfm_mgr_ucli.c
pkgsrc/bf-platforms/drivers/src/bf_port_mgmt/: bf_pm_intf.c  bf_pm_intf_new.c  bf_pm_porting.c  bf_pm_priv.h  bf_pm_qsfp_mgmt.c
pkgsrc/bf-platforms/drivers/src/bf_qsfp/: bf_qsfp_cli.c  bf_qsfp_comm.c
pkgsrc/p4-compilers/: CMakeLists.txt
pkgsrc/p4-compilers/bf-asm/: CMakeLists.txt
pkgsrc/p4-compilers/bf-asm/jbay/: CMakeLists.txt
pkgsrc/p4-compilers/bf-asm/tofino/: CMakeLists.txt
pkgsrc/switch-p4-16/api/common/: pal.cpp
pkgsrc/switch-p4-16/submodules/SAI/meta/: saiserialize.c
pkgsrc/target-syslibs/: CMakeLists.txt
pkgsrc/target-syslibs/include/target-sys/: log_common.h
pkgsrc/target-syslibs/include/target-sys/bf_sal/: bf_sys_dma.h  bf_sys_log.h  bf_sys_thread.h
pkgsrc/target-syslibs/src/bf_sal/: CMakeLists.txt
pkgsrc/target-syslibs/src/bf_sal/linux_usr/: bf_sys_dma_hugepages.c  bf_sys_illumos_dma.c  bf_sys_log.c  bf_sys_thread.c
(+11 files in other folders)
